package edu.fiuba.algo3.modelo.comandos;

public class Nada implements Command{

    @Override
    public void execute() {
        // No hace nada
    }
}
