@startuml

interface Estado{
    + accionNocturna(fase: FaseNocturna, objetivo: Jugador): void
    + accionDiurna(fase: FaseDiurna, objetivo: Jugador): void
    + estaVivo() : boolean
}


class Jugador{
    + Jugador(rol: Rol, nombre: String)
    + accionNocturna(fase: FaseNocturna, objetivo: Jugador) : void
    + accionDiurna(fase: FaseDiurna, objetivo: Jugador) : void
    + estaVivo() : boolean
    + morir() : void

}
interface Rol {
    - visitante: Visitante
    +accionNocturna(fase: FaseNocturna, base: Jugador, objetivo: Jugador): Command
}
interface Command{
    + execute()
}

Jugador --> Rol
Jugador --> Estado
Muerto ..|> Estado
Vivo ..|> Estado
Rol ..> Command

Ciudadano ..|> Rol
Medico ..|>Rol
Mafioso ..|> Rol
Padrino ..|> Rol
Detective ..|> Rol
Sheriff ..|> Rol

class Proteger{
    + Proteger(faseNocturna: FaseNocturna,
    objetivo: Jugador)
}

class Votar{
    + Votar(faseNocturna: FaseNocturna,
    votante: Jugador, votado: Jugador)
}
class Investigar{
    + Investigar(faseNocturna: FaseNocturna,
    base: Jugador, objetivo: Jugador)
}
class VotarPrioritario{
    + Proteger(faseNocturna: FaseNocturna,
    votante: Jugador, votado: Jugador)
}

class Nada{
    + Nada()
}


Proteger .|> Command
Investigar .|> Command
Votar .|> Command
VotarPrioritario .|> Command
Nada .|> Command



@enduml